# msu-ssc

./: .gitignore  README.md  pyproject.toml  ssc_logging.py  udp-hijack.py  udp-mux.py  uv.lock.OLD
.github/workflows/: release.yaml
src/msu_ssc/: io_util.py  path_util.py  prompt_util.py  ssc_log.py  ssc_logging.py  udp-mux.py  udp_mux.py  udp_proxy.py
tests/: test_logger.py  test_path_util.py
