[project]
name = "msu-ssc"
dynamic = ["version"]
# version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm.version]
source = "scm"
fallback_version = "0.55.55"

[project.optional-dependencies]
pretty = [
    "rich>=13.9.4",
]
logging = [
    "python-json-logger>=3.2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.2",
]
ait = [
    "ait-core",
    "ait-dsn",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "F541", # f-string without any placeholders
]

[tool.uv.sources]
ait-core = { git = "https://github.com/NASA-AMMOS/AIT-Core", rev = "2.5.2" }
ait-dsn = { git = "https://github.com/NASA-AMMOS/AIT-DSN", rev = "46c5a670811a9514d4d01cb13a96c3e93eee1684" }
