[project]
name = "msu-ssc"
dynamic = ["version"]
# version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.7"
dependencies = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm.version]
source = "scm"
fallback_version = "0.55.55"

[dependency-groups]
dev = [
    "freezegun>=1.5.1",
    "pytest>=7.4.4",
    "ruff>=0.9.5",
]

[project.optional-dependencies]
pretty = [
    "rich>=13.8.1",
]
logging = [
    "python-json-logger>=3.0.1",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "F541", # f-string without any placeholders
]
extend-select = [
    "I001",
]

[tool.ruff.lint.isort]
force-single-line = true