[project]
name = "msu-ssc"
dynamic = ["version"]
description = "Morehead State University Space Science Center utilities"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "python-json-logger>=3.0.1",
    "rich>=13.8.1",
]
license = { file = "LICENSE" }
authors = [
    {name = "David Mayo", email = "dcmayo@moreheadstate.edu>"},
]

[project.urls]
homepage = "https://github.com/msu-ssc/msu-ssc"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm.version]
source = "scm"
fallback_version = "0.0.0"

[dependency-groups]
dev = [
    "freezegun>=1.5.1",
    "pytest>=7.4.4",
    "ruff>=0.9.5",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "F541", # f-string without any placeholders
]
extend-select = [
    "I001", # isort unsorted-imports
]

[tool.ruff.lint.isort]
force-single-line = true
